:lipstick: (bugs) Fix safari browser support for gap and glassy h issue

--- a/components/Time.module.css
+++ b/components/Time.module.css
@@ -24,7 +24,9 @@
 .greeting__container {
   display: flex;
   align-items: center;
-  gap: 18px;
+}
+.greeting__container > *:first-child {
+  padding-right: 1rem;
 }
 
 .greeting__text {
