--- a/components/ui/Glassy.module.css
+++ b/components/ui/Glassy.module.css
@@ -1,6 +1,7 @@
 .container {
   background-color: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
+  height: 100%;
 }
 
 .container.night {
